Fixed: Customer filter filter is too narrow on customer interface (bug#13333).

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.InputFields.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.InputFields.css
@@ -66,7 +66,7 @@ div.InputField_InputContainer {
 
 .ActionRow .InputField_Search,
 .ActionRow .InputField_Autocomplete {
-    min-width: 100px;
+    min-width: 200px;
     box-shadow: none;
 }
 
